--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.28.0",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/nested-list": "^1.3.0",
     "axios": "^1.5.0",
+    "editorjs-header-with-alignment": "^1.0.1",
+    "editorjs-paragraph-with-alignment": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
@@ -20,13 +25,20 @@
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
+    "@editorjs/simple-image": "^1.5.1",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.15",
+    "editorjs-toggle-block": "^0.3.12",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.30",
+    "simple-image-editorjs": "^1.4.0",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.5",
     "vite-plugin-qrcode": "^0.2.2"
   }
