--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.28.0",
+    "@editorjs/embed": "^2.5.3",
     "@editorjs/header": "^2.7.0",
     "@editorjs/nested-list": "^1.3.0",
     "axios": "^1.5.0",
